recallable/tests/ui/derive_fail_recallable_skip_on_struct.stderr
error: `skip` is a field-level attribute, not an item-level attribute
 --> tests/ui/derive_fail_recallable_skip_on_struct.rs:4:14
  |
4 | #[recallable(skip)]
  |              ^^^^
