recallable/tests/ui/derive_fail_recallable_skip_on_struct.rs
use recallable::Recallable;

#[derive(Recallable)]
#[recallable(skip)]
struct Example {
    value: u32,
}

fn main() {}
